; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/twa/extr_tw_osl_cam.c_tw_osl_untimeout.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/twa/extr_tw_osl_cam.c_tw_osl_untimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tw_cl_req_handle = type { %struct.tw_osli_req_context* }
%struct.tw_osli_req_context = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tw_osl_untimeout(%struct.tw_cl_req_handle* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tw_cl_req_handle*, align 8
  %4 = alloca %struct.tw_osli_req_context*, align 8
  store %struct.tw_cl_req_handle* %0, %struct.tw_cl_req_handle** %3, align 8
  %5 = load %struct.tw_cl_req_handle*, %struct.tw_cl_req_handle** %3, align 8
  %6 = getelementptr inbounds %struct.tw_cl_req_handle, %struct.tw_cl_req_handle* %5, i32 0, i32 0
  %7 = load %struct.tw_osli_req_context*, %struct.tw_osli_req_context** %6, align 8
  store %struct.tw_osli_req_context* %7, %struct.tw_osli_req_context** %4, align 8
  %8 = load %struct.tw_osli_req_context*, %struct.tw_osli_req_context** %4, align 8
  %9 = getelementptr inbounds %struct.tw_osli_req_context, %struct.tw_osli_req_context* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
